WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260096
Fix TestWebKitAPI.WKNavigation.Multiple303Redirects in debug builds
https://bugs.webkit.org/show_bug.cgi?id=260096
Summary
Fix TestWebKitAPI.WKNavigation.Multiple303Redirects in debug builds
Alex Christensen
Reported
2023-08-11 14:41:11 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-11 14:41:23 PDT
<
rdar://problem/113772047
>
Alex Christensen
Comment 2
2023-08-11 14:42:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16622
EWS
Comment 3
2023-08-11 16:53:40 PDT
Committed
266836@main
(f6813e60a390): <
https://commits.webkit.org/266836@main
> Reviewed commits have been landed. Closing PR #16622 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug