Fix TestWebKitAPI.WKNavigation.Multiple303Redirects in debug builds https://bugs.webkit.org/show_bug.cgi?id=260096 rdar://113772047

Reviewed by Chris Dumez.

It was asserting in statusText because it was using status code 303 which hadn't been added yet.

* Tools/TestWebKitAPI/cocoa/HTTPServer.mm:
(TestWebKitAPI::statusText):

Canonical link: https://commits.webkit.org/266836@main